--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://JatinCoder123.github.io/InvestmentCalculator",
+  "homepage": "https://JatinCoder123.github.io/Investment-Calculator",
   "name": "react-essentials-practice",
   "private": true,
   "version": "0.0.0",
